# MarkGPT

./: .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_EXAMPLES.md  CURRICULUM_RESTRUCTURING_FINAL.md  GETTING_STARTED.md  LICENSE.md  MODULE_02_ENRICHMENT_SUMMARY.txt  MODULE_03_ENRICHMENT_SUMMARY.txt  MODULE_1_1_COMPLETION_REPORT.md  Makefile  README.md  RELEASE_NOTES.md  REORGANIZATION_COMPLETE.md  RESOURCE_EXPANSION_SUMMARY.md  SECURITY.md  SYLLABUS.md  VERSION_HISTORY.md  add_notebook_explanations.py  create_branches.py  create_prs.py  create_prs_final.sh  create_remaining_prs.py  requirements.txt  setup.cfg
.github/: pull_request_template.md
assets/: players.py
capstone/: CAPSTONE_GUIDE.md  DEPLOYMENT_GUIDE.md  MODEL_CARD_TEMPLATE.md
configs/: markgpt_nano.yaml  markgpt_small.yaml
contributors/: ACHIEVEMENTS.md  CONTRIBUTION_CHECKLISTS.md  CONTRIBUTION_FAQ.md  CONTRIBUTORS_GUIDE.md  CONTRIBUTOR_SPOTLIGHT_TEMPLATE.md  DOCUMENTATION_INDEX.md  FIRST_CONTRIBUTION_GUIDE.md  GIT_TROUBLESHOOTING.md  LEARNING_WHILE_CONTRIBUTING.md  QUICK_START.md  README.md  RESOURCES.md
docs/: ACTIVATION_FUNCTIONS.md  ADVANCED_EVALUATION.md  ADVANCED_TECHNIQUES.md  ADVANCED_TRAINING.md  API_REFERENCE.md  ARCHITECTURE_DEEP_DIVE.md  ATTENTION_MATHEMATICS.md  ATTENTION_OPTIMIZATION.md  BANSO_LINGUISTICS.md  CASE_STUDIES.md  CITATIONS.md  COMMIT_SUMMARY.md  COMMON_PATTERNS.md  COMMUNITY_CONTRIBUTIONS.md  COMMUNITY_GUIDELINES.md  COMPREHENSIVE_BENCHMARKING.md  CONTRIBUTING.md  CONTRIBUTION_TEMPLATES.md  DATASET_DOCUMENTATION.md  DATA_COLLECTION_GUIDE.md  DEBUGGING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTICS.md  DISTRIBUTED_TRAINING.md  EMBEDDING_LAYERS.md  ENVIRONMENT_VARIABLES.md  EVALUATION_METRICS.md  EVAL_FRAMEWORK.md  EXAMPLE_TRAINING.md  EXTENDED_FAQ.md  EXTENDED_FAQ_TECHNICAL.md  FAQ.md  FINETUNING_ADAPTATION.md  FINETUNING_BEST_PRACTICES.md  GLOSSARY.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INFERENCE_OPTIMIZATION.md  INFERENCE_PATTERNS.md  INSTALL.md  (+35 more)
module-01/: README.md
module-02/: README.md
scripts/: compare_tokenizers.py  download_data.py  find_lr.py  preprocess_bible.py  verify_setup.py  (+2 more)
(+781 files in other folders)
