[metadata]
name = markgpt
version = 1.0.0
author = IWS Technical
author_email = iwstechnical@gmail.com
description = A 60-day curriculum for building GPT-style language models, taught with MarkGPT on King James Bible and Lamnso' text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iwstechnical/MarkGPT-LLM-Curriculum
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Intended Audience :: Education

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.0.0
    tqdm>=4.65.0
    pyyaml>=6.0
    numpy>=1.24.0
    pytest>=7.0.0
extras_require =
    dev =
        black==23.12.1
        ruff==0.1.11
        mypy==1.8.0
        pre-commit==3.6.0
        jupyterlab>=4.0.0
        ipywidgets>=8.0.0
    train =
        wandb>=0.16.0
        tensorboard>=2.14.0
        sacrebleu>=2.4.0
    inference =
        gradio>=4.0.0
        transformers>=4.35.0

[options.packages.find]
where = .

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
no_implicit_optional = True
warn_unused_ignores = True
disallow_untyped_defs = False
disallow_incomplete_defs = False

[[tool:pytest]]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --verbose

[coverage:run]
source = src
omit =
    */tests/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[tool:black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool:ruff]
line-length = 100
target-version = "py310"
extends-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "notebooks",
]
